--- a/.travis.yml
+++ b/.travis.yml
@@ -17,6 +17,6 @@ before_script:
 script:
   - sfdx force:org:create -s -f config/workspace-scratch-def.json -a ciorg
   - sfdx force:source:push -u ciorg
-  - sfdx force:apex:test:run
+  - sfdx force:apex:test:run -c -r human
   - sleep 4m
   - sfdx force:org:delete -u ciorg -p
